js/js.translator/testData/incremental/invalidation/KT-85270/main/useStdlibDeclarationUsedInKTest.0.kt
fun useStdlibDeclarationUsedInKTest(): Boolean {
    // indexOf is used by the kotlin.test, which is loaded by backend context
    return "lol".indexOf('!') == -1
}